# skiros2_examples

./: CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
config/: config.rviz
launch/: action_example.launch  follow_pose_example.launch  main.launch  planning_example.launch  simple_params_example.launch  turtlesim_example.launch
owl/: planning_scene.turtle  turtlesim_robot_description.owl
owl/scenes/: test.turtle
src/skiros2_examples/action_example/: skill_client.py  test_action_server
src/skiros2_examples/follow_pose_example/: follow_pose_primitives.py  follow_pose_skills.py
src/skiros2_examples/planning_example/: planning_skills.py
src/skiros2_examples/simple_params_example/: simple_params_primitives.py  simple_params_skills.py
src/skiros2_examples/turtlesim_example/: avoid_the_turtles_demo.py  turtlesim_drivers.py  turtlesim_primitives.py  turtlesim_simulation.py  turtlesim_skills.py
