<?xml version="1.0"?>
<package>
  <name>skiros2_examples</name>
  <version>1.0.0</version>
  <description>Set of examples for the skiros2 platform</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="bjarne@m-tech.aau.dk">Bjarne Grossmann</maintainer>
  <license>L-GPL</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_common</run_depend>
  <run_depend>skiros2_skill</run_depend>
</package>
